--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p id="topPara"></p>
-    <h1></h1>
-   <p id="para"></p>
-
-    <script type="module" src="chapter4.js"></script>
-    <script type="module" src="app.js"></script>
-    
+   <ul>
+    <li><a href="chapter 2/chapter2.html"> assignment 2</a></li>
+    <li><a href="chapter 4/chapter4.html"> assignment 4</a></li>
+    <li><a href="chapter5/chapter5.html"> assignment 5</a></li>
+    <li><a href="chapter6/chapter6.html">assignment 6</a></li>
+    <li><a href="chapter7/chapter7.html">assignment 7</a></li>
+    <li><a href="chapter8/chapter8.html">assignment 8</a></li>
+    <li><a href="chapter9/chapter9.html">assignment 9</a></li>
+    <li><a href="chapter10/chapter10.html">assignment 10</a></li>
+   </ul>
 </body>
 </html>
