--- a/index.html
+++ b/index.html
@@ -6,16 +6,52 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<style>
+    body {
+        background-color: #a59c9c;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    ul{
+        display: flex;
+        flex-wrap: wrap;
+        padding: 2rem;
+        gap: 1rem;
+
+    }
+    li{
+        list-style: none;
+        border: 2px solid white ;
+        padding: 0.5rem 1rem;
+        border-radius: 15px;
+        background-color: rgb(26, 233, 164);
+        outline: 2px solid white;
+        outline-offset: 2px;
+    }
+    a{
+        text-decoration: none;
+        color: rgb(68, 53, 47);
+        text-transform: uppercase;
+        font-weight: bold;
+        transition: 0.5s;
+        
+    }
+</style>
 <body>
    <ul>
-    <li><a href="chapter 2/chapter2.html"> assignment 2</a></li>
-    <li><a href="chapter 4/chapter4.html"> assignment 4</a></li>
-    <li><a href="chapter5/chapter5.html"> assignment 5</a></li>
-    <li><a href="chapter6/chapter6.html">assignment 6</a></li>
-    <li><a href="chapter7/chapter7.html">assignment 7</a></li>
-    <li><a href="chapter8/chapter8.html">assignment 8</a></li>
-    <li><a href="chapter9/chapter9.html">assignment 9</a></li>
-    <li><a href="chapter10/chapter10.html">assignment 10</a></li>
+    <li><a href="chapter 2/chapter2.html" target="_blank"> assignment 2</a></li>
+    <li><a href="chapter 4/chapter4.html" target="_blank"> assignment 4</a></li>
+    <li><a href="chapter5/chapter5.html" target="_blank"> assignment 5</a></li>
+    <li><a href="chapter6/chapter6.html" target="_blank">assignment 6</a></li>
+    <li><a href="chapter7/chapter7.html" target="_blank">assignment 7</a></li>
+    <li><a href="chapter8/chapter8.html" target="_blank">assignment 8</a></li>
+    <li><a href="chapter9/chapter9.html" target="_blank">assignment 9</a></li>
+    <li><a href="chapter10/chapter10.html" target="_blank">assignment 10</a></li>
    </ul>
 </body>
 </html>
